--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -129,7 +129,7 @@ aside li {
 */
 .header {
   align-items: center;
-  background: #fff;
+  background-color: black;
   display: flex;
   height: var(--header-height);
   padding: 0 1rem;
@@ -162,6 +162,7 @@ aside li {
 
 .header-menu-item {
   cursor: pointer;
+ 
 }
 
 .header-ctas {
@@ -169,6 +170,10 @@ aside li {
   display: flex;
   grid-gap: 1rem;
   margin-left: auto;
+}
+
+.header a{
+  color:white !important
 }
 
 /*
