--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -176,6 +176,11 @@ aside li {
   color:white !important
 }
 
+.logo{
+  height: 40px;
+  width: 100px;
+}
+
 /*
 * --------------------------------------------------
 * components/Footer
